# minime

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
src/: app.py  controller.py  dependencies.py  helpers.py  models.py  repository.py  services.py
tests/: test_controller.py  test_helpers.py  test_services.py
